--- a/evisa-applicant-api/src/main/resources/application.properties
+++ b/evisa-applicant-api/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.hibernate.SQL=DEBUG
 common.config.location=/home/ubuntu/hypercube/evisa/common/rel1_0/config/common-cfg.properties
 
 #stripe.webhook.secret=whsec_qPPq8ktX2PDrL0Jt0Ugho2t3vZLk6c1j  //test
-stripe.webhook.secret=whsec_9V73HgnxcKRXQhXNZsrNbiyliznrDRmW
+#stripe.webhook.secret=whsec_9V73HgnxcKRXQhXNZsrNbiyliznrDRmW
 
 
 #external.config.location=D:/evisa/applicant/rel1_0/config/applicant-cfg.properties
