--- a/evisa-applicant-api/src/main/resources/application.properties
+++ b/evisa-applicant-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.file.name=/home/ubuntu/hypercube/evisa/applicant/rel1_0/log
 logging.level.org.hibernate.SQL=DEBUG
 common.config.location=/home/ubuntu/hypercube/evisa/common/rel1_0/config/common-cfg.properties
 
-#stripe.webhook.secret=whsec_qPPq8ktX2PDrL0Jt0Ugho2t3vZLk6c1j  //test
+stripe.webhook.secret=whsec_qPPq8ktX2PDrL0Jt0Ugho2t3vZLk6c1j  //test
 #stripe.webhook.secret=whsec_9V73HgnxcKRXQhXNZsrNbiyliznrDRmW
 
 
